<resources>
    <string name="app_name">Subway E-ticketting</string>
    <string name="logo">logo</string>
    <string name="phone">رقم المحمول</string>
    <string name="password">Password</string>
    <string name="log_in">Login</string>
    <string name="sign_without_logging">الاستمرار بدون تسجيل دخول</string>
    <string name="forget_pass">Forgot Password ?</string>
    <string name="or">--------------------- أو ---------------------</string>
    <string name="create_new_account">Create Account</string>
    <string name="sign_up_with_google">إنشاء حساب باستخدام Google</string>
    <string name="sign_up_with_face">إنشاء حساب باستخدام Facebook</string>
    <string name="sign_in">تسجيل دخول</string>
    <string name="display_price">%,.0fLE</string>
    <string name="first_name">First Name</string>
    <string name="first_name_warrning">Enter First Name</string>
    <string name="mail">Email</string>
    <string name="mail_exist">Email already exist</string>
    <string name="pass_less">Password Less Than 8 Characters </string>
    <string name="wrong_pass">Wrong password </string>
    <string name="user_not_found">User not found </string>
    <string name="email_does_not_match">Email does not match </string>
    <string name="retype_pass">تأكيد كلمة المرور</string>
    <string name="signIn">Sign In</string>
    <string name="message2">To access all features</string>
    <string name="phone_num">رقم المحمول</string>
    <string name="send_verification_code">ارسال كود التفعيل</string>
    <string name="continue_pass">الاستمرار</string>
    <string name="enter_verification">ادحل كود التفعيل</string>
    <string name="message3">تم ارسال كود التفعيل للرقم: </string>
    <string name="message4">برجاء إدخال كود التفعيل</string>
    <string name="confirm_new_pass">Confirm Password</string>
    <string name="new_pass">أدخل كلمة المرور الجديده</string>
    <string name="base_url">https://subway-ticketing-system.herokuapp.com/</string>
    <string name="news_title">عنوان الخبر</string>
    <string name="news">الأخبار</string>
    <string name="_20_08_2019">20/08/2019</string>
    <string name="test_body_text">ناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنصَ</string>
    <string name="news_body">نص الخبر</string>
    <string name="news_image">صورة الخبر</string>
    <string name="user_name">Name</string>
    <string name="add_complain">تقديم بلاغ</string>
    <string name="complain_title">عنوان البلاغ</string>
    <string name="complain_content">محتوى البلاغ</string>
    <string name="add_image">إضافة صورة</string>
    <string name="send_complain">إرسال البلاغ</string>
    <string name="pass_fix">pass fix</string>
    <string name="invalid_pass">Enter Pass between 12 to 8 Characters</string>
    <string name="user_blocked">تم حجب هذا الحساب برجاء استخدام حساب اخر</string>
    <string name="user_deleted">تم حذف هذا الحساب برجاء استخدام حساب اخر</string>
    <string name="fix_confirmPassWarning">Enter the same Password</string>
    <string name="invalid_mail_warning">Enter mail correctly</string>
    <string name="contact_qassem">التواصل مع أمانة القصيم</string>
    <string name="contact_health">التواصل مع الإدارة العامه لصحة البيئة</string>
    <string name="favourite_rest">مطاعمي المفضلة</string>
    <string name="search_rest">ابحث عن مطعمك</string>
    <string name="loading">جاري الإرسال</string>
    <string name="secretariat_news">اخبار الإدارة العامة لصحة البيئة</string>
    <string name="news_health">نشرات توعوية من صخة البيئة</string>
    <string name="secretariat_info">نبذة عامة عن الإدارة العامة لصحة البيئة</string>
    <string name="health_website">البوابة العامة لصحة اليئة</string>
    <string name="wrong_code">كود التفعيل خاطئ</string>
    <string name="wrong_mail_or_pass">Wrong mail or pass</string>
    <string name="else_on_repsonse">else onResponse</string>
    <string name="ticket_num_format"> %d</string>
    <string name="ticket_price_format"> %d LE / Ticket</string>
    <string name="ticket_title_format"> %s Ticket</string>
    <string name="ticket_cost_format">Total cost : %d LE</string>
    <string name="check_in_format">Check-in : %s</string>
    <string name="check_out_format">Check-out : %s</string>
    <string name="scan_mess_format">Scan this QR code at %s gate to %s</string>
    <string name="unrecorded_num_warning">هذا الرقم غير مسجل</string>
    <string name="tell_a_friend">اخبر صديق</string>
    <string name="account_settings">إعدادات الحساب</string>
    <string name="report_a_bug">أبلغ عن خطأ</string>
    <string name="edit_policy">تعديل سياسة الخصوصية</string>
    <string name="help">المساعده</string>
    <string name="info_about_company">الملاحظات والمقترحات</string>
    <string name="privacy_policy">سياسة الخصوصية</string>
    <string name="warning">error in if condition in onResponse method</string>
    <string name="user_settings">إعدادات المستخدم</string>
    <string name="account_Settings">إعدادات الحساب</string>
    <string name="password_settings">إعدادات كلمة المرور</string>
    <string name="save_settings">حفظ الإعدادات</string>
    <string name="log_out">Logout</string>
    <string name="keep_me_logged_in">تذكرني</string>
    <string name="test_address">عنوان المطعم</string>
    <string name="rest_name_favourite_rest">اسم المطعم</string>
    <string name="favourite_restaurants">المطاعم المفضلة</string>
    <string name="contact_mail">عبر البريد الإلكتروني</string>
    <string name="contact_mobile">عبر الرقم المحمول</string>
    <string name="contact_social">عبر مواقع التواصل الإجتماعي</string>
    <string name="contact_qayeem">التواصل مع أمانة القصيم</string>
    <string name="show_news">عرض الخبر</string>
    <string name="not_available">غير متوفر</string>
    <string name="publications">النشرات</string>
    <string name="publication_image">صورة النشره</string>
    <string name="publication_body">نص النشرة</string>
    <string name="show_publication">عرض النشرة</string>
    <string name="no_info">لم يتوفر أي بيانات</string>
    <string name="complain_type">نوع البلاغ</string>
    <string name="complain_place">مكان البلاغ</string>
    <string name="choose_comp_type">اختر نوع البلاغ</string>
    <string name="search">ابحث عن مطعم</string>
    <string name="street">الشارع</string>
    <string name="neighbourhood">الحي</string>
    <string name="munic">البلدية</string>
    <string name="food_categories">فئات الأكل</string>
    <string name="food_materials">المواد الغذائية</string>
    <string name="complain_images">صور البلاغ</string>
    <string name="view_complain">عرض بلاغ</string>
    <string name="view_image">عرض صوره</string>
    <string name="change_information">تعديل المعلومات</string>
    <string name="users">المستخدمين</string>
    <string name="view_users">عرض المستخدمين</string>
    <string name="view_blocked_users">عرض المحظورين</string>
    <string name="complains">البلاغات</string>
    <string name="view_complains">عرض البلاغات</string>
    <string name="view_reported_bugs">عرض الأخطاء المبلغة</string>
    <string name="reported_bugs">الأخطاء المبلغة</string>
    <string name="app_label">Taqyeem</string>
    <string name="users_search_hint">ابحث عن مستخدم</string>
    <string name="user_info">معلومات المستخدم</string>
    <string name="account_info">بيانات الحساب</string>
    <string name="block_user">حظر المستخدم</string>
    <string name="delete_user">مسح المستخدم</string>
    <string name="view_user">عرض مستخدم</string>
    <string name="bug_des">محتوى الخطأ</string>
    <string name="send">إرسال</string>
    <string name="report_date">تاريخ الإبلاغ</string>
    <string name="date">التاريخ</string>
    <string name="bug_title">عنوان الخطأ</string>
    <string name="save">حفظ</string>
    <string name="store_info">معلومات عن المطعم</string>
    <string name="store_address">عنوان المطعم</string>
    <string name="store_images">صور من المطعم</string>
    <string name="view_comments">عرض التعليقات</string>
    <string name="rate">تقييم</string>
    <string name="rest_activities">أنشطة المطعم</string>
    <string name="directions">الإتجاهات</string>
    <string name="add_to_favourite">إضافة للمفضله</string>
    <string name="textview1">textView1</string>
    <string name="test_date">11/20/2019</string>
    <string name="showBug">عرض الخطأ</string>
    <string name="reporter">المبلغ عن الخطأ</string>
    <string name="view_store">عرض مطعم</string>
    <string name="contact_store">التواصل مع المطعم</string>
    <string name="no_store_images">لم يتوافر صور من هذا المطعم</string>
    <string name="criteria_name">اسم التقييم</string>
    <string name="user_comment">التعليق</string>
    <string name="no_blocked_users">لم يتم العثور على مستخدمين محظورين</string>
    <string name="favouriteProgMessege">جاري الإضافة للمفضلة</string>
    <string name="progMessage">Loading</string>
    <string name="contact_name">موقع التواصل</string>
    <string name="contact_type">اسم التواصل</string>
    <string name="no_complains">لا يوجد بلاغات سابقه</string>
    <string name="complain_time">وقت البلاغ</string>
    <string name="no_comments">لا يوجد تعليقات</string>
    <string name="make_admin">أجعل مشرف</string>
    <string name="no_favourite_stores">لا يوجد مطاعم مفضلة</string>
    <string name="no_complain_images">لا يوجد صور مرفقه مع هذا البلاغ</string>
    <string name="choose_munic_district_first">برجاء اختيار البدية والحي والشارع اولا</string>
    <string name="chose_food_category">برجاء اختيار فئة الطعام</string>
    <string name="no_food_stores">لم يتم العثور على مطاعم من هذه الفئة</string>
    <string name="choose_munic">برجاء اختيار البلدية</string>
    <string name="choose_district">برجاء اختيار الحي</string>
    <string name="choose_street">برجاء اختيار الشارع</string>
    <string name="loading_food_categories">جاري تحميل فئات الطعام</string>
    <string name="choose_food_category">برجاء اختيار فئات الطعام</string>
    <string name="no_food">لم يتم العثور على أي  فئات الطعام</string>
    <string name="some_error">حدث خطأ ما, الرجاء المحاوله مره أخرى</string>
    <string name="loading_stores">جاري تحميل المطاعم</string>
    <string name="no_stores_in_this_street">لم يتم العثور على أي مطاعم في هذا الشارع</string>
    <string name="loading_munic">جاري تجميل البلديات</string>
    <string name="no_munics">لم يتم العثور على أي بلديات</string>
    <string name="loading_districts">جاري تحميل الأحياء</string>
    <string name="no_districts">لم يتم العثور على أي أحياء في هذه البلديه</string>
    <string name="loading_streets">جاري تحميل الشوارع</string>
    <string name="no_streets">لم يتم العثور على أي شوارع في هذا الحي</string>
    <string name="district">الحي</string>
    <string name="no_searched_stores">لم يتم العثور على مطاعم بهذا الاسم</string>
    <string name="block_messege">لقد تم حظر هذا الحساب, برجاء التواصل مع المشرفين على البرنامج</string>
    <string name="failure_happened">Failure happened</string>
    <string name="check_network" translatable="false">Check network connection and try again</string>
    <string name="ok">حسنا</string>
    <string name="progSavingMessage">جاري حفظ البيانات</string>
    <string name="rating_added_message">تم إضافة التقييم بنجاح</string>
    <string name="error_message1">حدث خطأ ما, الرجاء المحاوله مره أخر1234ى</string>
    <string name="admin_block_not_allowed">لا يمكن حظر مستخدم مشرف</string>
    <string name="add_admin_not_allowed">لا يمكن إضافة مستخدم محظور كمشرف</string>
    <string name="sign_up">Sign Up</string>
    <string name="birth_date">Birth date</string>
    <string name="select_gender">Gender</string>
    <string name="last_name">Last Name</string>
    <string name="pocket">Pocket</string>
    <string name="tickets">Tickets</string>
    <string name="history">History</string>
    <string name="check_in">Check In</string>
    <string name="scan_this_qr_code">Scan this QR code</string>
    <string name="settings">Settings</string>
    <string name="overview">Overview</string>
</resources>