<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.activity.SignUpActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/very_large_margin"
        android:fontFamily="@font/segoe_ui"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sign_in_main_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/textView2"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui"
        android:gravity="center"
        android:text="@string/message2"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sign_in_sub_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/sign_up_f_name_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:backgroundTint="@color/colorPrimary"
        android:drawableStart="@drawable/user_icon"
        android:drawablePadding="10dp"
        android:fontFamily="@font/segoe_ui"
        android:hint="@string/first_name"
        android:padding="15dp"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/sign_up_l_name_et"
        app:layout_constraintStart_toStartOf="@+id/v_line1"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/sign_up_l_name_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:backgroundTint="@color/colorPrimary"
        android:drawableStart="@drawable/user_icon"
        android:drawablePadding="10dp"
        android:fontFamily="@font/segoe_ui"
        android:hint="@string/last_name"
        android:padding="15dp"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/v_line2"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        tools:targetApi="lollipop" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_f_name_et">


        <EditText
            android:id="@+id/sign_up_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="10dp"
            android:fontFamily="@font/segoe_ui"
            android:hint="@string/mail"
            android:padding="15dp"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorWhite"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/sign_up_pass_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="10dp"
            android:fontFamily="@font/segoe_ui"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"

            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorWhite"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/sign_up_confirm_pass_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="10dp"
            android:fontFamily="@font/segoe_ui"
            android:hint="@string/confirm_new_pass"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorWhite"
            tools:targetApi="lollipop" />

    </LinearLayout>

    <Spinner
        android:id="@+id/sign_up_gender_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:background="@android:drawable/spinner_background"
        android:drawableStart="@drawable/gender_icon"
        android:entries="@array/gender_array"
        android:spinnerMode="dropdown"
        android:text="@string/select_gender"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toStartOf="@+id/v_line2"
        app:layout_constraintStart_toStartOf="@+id/v_line1"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/sign_up_calender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:background="@android:drawable/spinner_background"
        android:drawableStart="@drawable/calender_icon"
        android:fontFamily="@font/segoe_ui"
        android:text="@string/birth_date"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/v_line2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_sign_up"
        android:fontFamily="@font/segoe_ui"
        android:padding="15dp"
        android:shadowColor="@android:color/transparent"
        android:text="@string/sign_up"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sign_in_medium_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_gender_spinner" />

    <TextView
        android:id="@+id/sign_up_sign_up_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:fontFamily="@font/segoe_ui"
        android:gravity="center"
        android:text="@string/signIn"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sign_in_sub_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_line3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1" />


</androidx.constraintlayout.widget.ConstraintLayout>